# MOC-transport

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  AC1_standard_names.html  AC1_units.html  AC1_variables.html  AC1_vocabularies.html  CITATION.cff  CONTRIBUTING.md  README.md  actions.html  amocarray.html  conventions.html  demo-output.html  demo-output.ipynb  developer_guide.html  faq.html  format_AC1.html  format_conversion.html  format_convert_move.html  format_convert_osnap.html  format_convert_rapid.html  format_convert_samba.html  format_oceanSITES.html  format_orig.html  format_orig_move.html  format_orig_osnap.html  format_orig_rapid.html  format_orig_samba.html  genindex.html  gitcollab.html  github.html  github_v1.html  gitorg.html  housekeeping.html  index.html  installation.html  objects.inv  py-modindex.html  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  docs_deploy.yml  tests.yml
_modules/: index.html
_modules/amocarray/: plotters.html  read_move.html  read_osnap.html  read_rapid.html  read_samba.html  readers.html  standardise.html  tools.html  utilities.html  writers.html
_sources/: demo-output.ipynb.txt  developer_guide.md.txt  format_orig.rst.txt  gitcollab.md.txt  gitorg.md.txt  index.rst.txt  installation.md.txt
_static/: basic.css
amocarray/: logger.py  plotters.py  read_41n.py  read_fw2015.py  read_mocha.py  read_move.py  read_osnap.py  read_rapid.py  read_samba.py  readers.py  standardise.py  tools.py  utilities.py  writers.py
amocarray/metadata/: fw2015_array.yml  mocha_array.yml  move_array.yml  osnap_array.yml  rapid_array.yml  samba_array.yml
data/: 3369779  DSO_transport_hourly_1996_2021.nc  MOC_TotalAnomaly_and_constituents.asc  OSNAP_MOC_MHT_MFT_TimeSeries_201408_202006_2023.nc  OS_MOVE_20000206-20221014_DPR_VOLUMETRANSPORT.nc
docs/source/: AC1_reference_vocabularies.rst  AC1_standard_names.rst  AC1_variables.rst  actions.md  amocarray.rst  conf.py  format_AC1.rst  format_orig.rst  (+6 more)
notebooks/: demo.ipynb
tests/: conftest.py  test_readers.py  test_standardise.py  test_tools.py  test_utilities.py
