[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=45",
  "setuptools-scm[toml]>=8.0",
  "wheel",
]

[project]
name = "amocarray"
description = "Python project to read data from arrays measuring the Atlantic meridional overturning circulation"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Eleanor Frajka-Williams", email = "eleanorfrajka@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://github.com/AMOCcommunity/amocarray"
urls.homepage = "https://github.com/AMOCcommunity/amocarray"
urls.repository = "https://github.com/AMOCcommunity/amocarray"

[tool.setuptools]
packages = [
  "amocarray", "amocarray.metadata"
]
include-package-data = true

[tool.setuptools.package-data]
amocarray.metadata = ["*.yml"]

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "amocarray/_version.py"
write_to_template = "__version__ = '{version}'"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>[0-9]+(?:\\.[0-9]+)*[a-z0-9]*)$"
# tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.check-manifest]
ignore = [
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
select = ["D"]  # Enables pydocstyle checks
ignore = ["D107", "D203", "D213"]  # Optional ignores for __init__ and style conflicts

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "ANN", "B", "BLE", "TRY", "ARG", "SLF"]
ignore = ["E501", "D203", "D213", "D401", "PLR0913", "C901"]

